# FPP-JAX-Optimizer

./: .gitignore  README.md  mechanics_upgrade.md  pyproject.toml  requirements.txt  setup.py
examples/: type_iv_dome_workflow.ipynb
src/fpp_jax_optimizer/: __init__.py  config.py
src/fpp_jax_optimizer/core/: __init__.py  geometry.py  kinematics.py
src/fpp_jax_optimizer/io/: __init__.py  export.py
src/fpp_jax_optimizer/model/: __init__.py  fem.py  loss.py
src/fpp_jax_optimizer/topology/: __init__.py  mapping.py
tests/: test_gradients.py  test_kinematics.py  test_mechanics.py  test_optimization_frames.py
tools/: generate_readme_assets.py
