[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "fpp-jax-optimizer"
version = "0.1.0"
description = "Differentiable Fiber Patch Placement optimizer for Type IV COPV dome workflows"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "jax",
    "jaxlib",
    "optax",
    "numpy",
    "scipy",
    "matplotlib",
    "plotly",
    "Pillow",
]

[project.optional-dependencies]
dev = ["pytest"]

[tool.setuptools.packages.find]
where = ["src"]
